@@ -22,6 +22,8 @@ Version 1.11.15+dev:
    * Fixed bug #22144: An assertion failure with empty labels in a listbox.
    * The :inspect dialog now uses the same function as saved games to generate
      WML in text form instead of a simplified version.
+   * Added a button to copy the currently displayed content from the :inspect
+     dialog to clipboard.
  * WML engine:
    * Fixed a regression in 1.11.14 causing WML parser/preprocessor errors to
      not interrupt the game load sequence or display an error message in-game,
